--- a/manifest.json
+++ b/manifest.json
@@ -13,8 +13,8 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"],
-      "css": ["content.css"]
+      "js": ["scripts/content.js"],
+      "css": ["styles/content.css"]
     }
   ],
   "action": {
