--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["scripts/error-handler.js", "scripts/content.js"],
+      "js": ["scripts/error-handler.js", "scripts/config.js", "scripts/content.js"],
       "css": ["styles/variables.css", "styles/content.css"],
       "run_at": "document_idle"
     }
