--- a/manifest.json
+++ b/manifest.json
@@ -9,9 +9,9 @@
   ],
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["http://*/*", "https://*/*"],
       "js": ["scripts/error-handler.js", "scripts/config.js", "scripts/content.js"],
-      "css": ["styles/variables.css", "styles/content.css"],
+      "css": ["styles/variables.css", "styles/components.css", "styles/content.css"],
       "run_at": "document_idle"
     }
   ],
