--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,19 @@
 {
   "manifest_version": 3,
   "name": "VAT-OFF",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Show prices excluding VAT when you hover over them on any website.",
-  "permissions": [
-    "storage",
-    "activeTab",
-    "scripting"
-  ],
-  "action": {
-    "default_popup": "popup.html",
-    "default_title": "VAT-OFF"
-  },
+  "permissions": ["storage", "activeTab", "scripting"],
+  "action": {"default_popup": "popup.html", "default_title": "VAT-OFF"},
   "options_page": "options.html",
-  "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
-  },
-  "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'"
-  }
+  "icons": {"16": "icons/icon16.png", "48": "icons/icon48.png", "128": "icons/icon128.png"},
+  "content_scripts": [
+    {
+      "matches": ["http://*/*", "https://*/*"],
+      "js": ["scripts/error-handler.js", "scripts/config.js", "scripts/content.js"],
+      "css": ["styles/fonts.css", "styles/variables.css", "styles/components.css", "styles/content.css"],
+      "run_at": "document_idle"
+    }
+  ],
+  "content_security_policy": {"extension_pages": "script-src 'self'; object-src 'self'"}
 }
